--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ streamlit>=1.28.0
 groq>=0.4.0
 python-dotenv>=1.0.0
 regex>=2023.0.0
+requests>=2.31.0
+beautifulsoup4>=4.12.2
+markdown>=3.5.1
+pillow>=10.0.0
